# sdb_user_profile_svc

./: Makefile  README.md  pyproject.toml
src/sdb_user_profile_svc/: main.py
src/sdb_user_profile_svc/alembic/: alembic.ini  env.py
src/sdb_user_profile_svc/alembic/versions/: 97214870544a_create_user_profile_table.py  ead4fa15751d_create_userprofile_model_with_indexes.py
src/sdb_user_profile_svc/database/: connection.py  session.py
src/sdb_user_profile_svc/models/: __init__.py  base.py  user_profile.py
src/sdb_user_profile_svc/schemas/: __init__.py  user_profile.py
src/sdb_user_profile_svc/utils/: validation.py
tests/: conftest.py  test_alembic_setup.py  test_database_connection.py  test_database_health.py  test_database_session.py  test_package_structure.py  test_user_profile_migration.py  test_user_profile_migration_flow.py  test_user_profile_model.py  test_user_profile_schemas.py
